Mon Dec  8 23:34:32 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c, libxslt/xslt.c: modified to assure
	  XML_CDATA_SECTION_NODE's do not have xmlStringTextNoenc
	  set into node name.  This modification arises from
	  bug #128520, and avoids unnecessary work in libxml2.
	  
Mon Dec  1 16:41:27 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/*.h *.h.in: updated the metadata informations in the headers
	* doc/* doc/html/*: regenerated the docs.

Sun Nov 30 23:25:22 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* doc/Makefile.am: small further enhancement to makefile
	* doc/APIchunk[127].html, doc/libxslt-api.xml, doc/libxslt-refs.xml,
	  doc/html/libxslt-transform.html: updated to reflect last change
	  to transform.c

Sun Nov 30 22:44:07 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* doc/newapi.xsl, doc/api.xsl, doc/apibuild.py, doc/site.xsl,
	  Makefile.am: adapted the libxml files for libxslt.
	* doc/API*.html, doc/html/*.html, doc/libxslt-api.xml,
	  doc/libexslt-api.xml, doc/libxslt-refs.xml,
	  win32/libxslt.def.src, win32/libexslt.def.src: regenerated
	  the docs.

Sun Nov 30 18:48:27 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: change initialisation of external functions
	  to take place in xsltNewTransformContext instead of in
	  xsltApplyStylesheetInternal.  This fixes bug 122483, and should
	  also fix problem reported on the mailing list on today's date.

Wed Nov 26 09:49:11 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/imports.c, libxslt/xsltInternals.h: Changed to
	  detect recursion in xslt:include (bug #127687).
	* tests/XSLTMark/reverser.out,
	* test/docbook/result/xhtml/gdp-handbook.xhtml: results changed
	  because of fix of bug #127877 in libxml2 (quotes in text)

Mon Nov 24 07:32:38 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libxslt/xslt.c, libxslt/imports.c, libxslt/parserInternals.h:
	  Changed to detect recursion in xslt:import (bug #127687).