@@ -11,7 +11,7 @@ PACKAGE=libxslt
 LIBEXSLT_MAJOR_VERSION=0
 LIBEXSLT_MINOR_VERSION=8
 LIBEXSLT_MICRO_VERSION=0
-LIBXML_REQUIRED_VERSION=2.6.0
+LIBXML_REQUIRED_VERSION=2.6.3
 
 
 LIBXSLT_VERSION=$LIBXSLT_MAJOR_VERSION.$LIBXSLT_MINOR_VERSION.$LIBXSLT_MICRO_VERSION
